# SolAR

./: .gitignore  CLIENT-SIGNING.md  LICENSE  README.md
Website/SolARexplorer_bundle/: README.md  craco.config.js  package-lock.json  package.json
Website/SolARexplorer_bundle/src/: App.css  App.js
git-solana/: Anchor.toml  README.md  package-lock.json  package.json  test_user.json
git-solana/.cargo/: config.toml
git-solana/programs/git-solana/: Cargo.toml
git-solana/programs/git-star/: Cargo.toml  README.md
git-solana/programs/git-star/src/: lib.rs
git-solana/server/: README.md  ROADMAP.md  fix-deps.sh  package-lock.json  package.json  testserver.js
git-solana/server/public/: index.html
git-solana/server/src/: activity.js  (+4 more)
git-solana/test/: create-test-user.js  simple-test.js  test-full-workflow.js
git-solana/tests/: git-solana.ts  git-star.ts  test-git-star.js
server/: .gitignore  INTEGRATION.md  README.md  SOLANA-INTEGRATION.md  githubserverapi.py  package-lock.json  package.json  setup-solana.js  working-server.js
server/arweave/: arweaveGit.js  check-irys-balance.js  example.js  fetchAndDecode.js  fund-irys.js  getWalletAddress.js  irys.js  logs  manual_tx.py  package.json  repo.bundle  repo.bundle.bak  test-bundle.js  upload.js  uploadGitBundle.js  uploadLocal.js  uploadTestData.js
server/solana/: lab.ipynb  requirements.txt
solar-git-signer/: README.md  package-lock.json  package.json  test-phantom-mobile.js  test-phantom.js
solar-git-signer/src/: callback.js  cli.js  index.js  installer.js  phantom.js  signer.js  url-shortener.js
(+49 files in other folders)
