[package]
name = "git-star"
version = "0.1.0"
description = "Git repository starring functionality on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "git_star"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.17.17"
git-solana = { path = "../git-solana", features = ["cpi"] }